--- a/jenkinsFile
+++ b/jenkinsFile
@@ -6,6 +6,7 @@ pipeline {
                 echo "step 1"
                 echo "step 2"
                 echo "$env.GIT_COMMIT"
+                bat 'set'
             }
 
         }
