--- a/jenkinsFile
+++ b/jenkinsFile
@@ -3,6 +3,7 @@ pipeline {
     stages {
         stage("scm checkout") {
             steps {
+                checkout scm
                 echo "step 1"
                 echo "step 2"
                 echo "$env.GIT_COMMIT"
