--- a/jenkinsFile
+++ b/jenkinsFile
@@ -2,11 +2,15 @@ pipeline {
     agent any
     stages {
         stage("scm checkout") {
+
+            def scmVars = checkout scm
+            def commitHash = scmVars.GIT_COMMIT
+
             steps {
-                checkout scm
+
                 echo "step 1"
                 echo "step 2"
-                echo "$env.GIT_COMMIT"
+                echo "The commit record is $env.GIT_COMMIT"
                 bat 'set'
             }
 
